/*
 * SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package gateway;

service PiccoloGatewayService {
  rpc RequestEvent (EventName) returns (Reply);
}

message EventName {
  FuncId id = 1;
  string name = 2;
  Target target = 3;
}

enum FuncId {
  Enable = 0;
  Disable = 1;
}

enum Target {
  StateManager = 0;
}

message Reply {
  bool isOk = 1;
}
